:sparkles: Criação da entidade Music
Criação da Entidade JPA Music e inclusão de um registro na tabela (data.sql)
